<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/nameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nameLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/artistLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/name_editText"/>

    <TextView
        android:id="@+id/artistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artistLabel"
        app:layout_constraintTop_toBottomOf="@+id/nameLabel"
        app:layout_constraintBottom_toTopOf="@+id/ratingLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/artist_editText"/>

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingLabel"
        app:layout_constraintTop_toBottomOf="@+id/artistLabel"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/rating_editText"/>

    <TextView
        android:id="@+id/ratingExtraLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ratingExtraLabel"
        app:layout_constraintTop_toBottomOf="@+id/artist_editText"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintStart_toEndOf="@+id/rating_editText"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addItem"
        android:text="@string/addButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rating_editText" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/songNameHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/artist_editText"
        app:layout_constraintStart_toEndOf="@+id/nameLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/artist_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/songArtistHint"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/name_editText"
        app:layout_constraintBottom_toTopOf="@+id/rating_editText"
        app:layout_constraintStart_toEndOf="@+id/artistLabel"
        app:layout_constraintEnd_toEndOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/rating_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/songRatingHint"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/artist_editText"
        app:layout_constraintBottom_toTopOf="@+id/add_button"
        app:layout_constraintStart_toEndOf="@+id/ratingLabel"
        app:layout_constraintEnd_toStartOf="@+id/ratingExtraLabel"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>